feat(user): add seeder and fix some errors
